# my_engine

./: CMakeLists.txt  vcpkg.json
docs/: stg_sync_log.md
src/: main.cpp
src/core/: Game.cpp  Game.h  Window.cpp  Window.h  app.cpp  app.h
src/gfx/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/objects/: BlockPlacement.cpp  BlockPlacement.h  DotObject.cpp  DotObject.h  MarioObject.cpp  MarioObject.h  PlayerPhysicsTuning.cpp  PlayerPhysicsTuning.h  TriangleObject.cpp  TriangleObject.h
src/physics/: Collision2D.cpp  Collision2D.h
src/scene/: GameObject.h  Scene.cpp  Scene.h
tests/: block_placement_tests.cpp  collision2d_tests.cpp  player_physics_tuning_tests.cpp
